# SalesQualifier

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
agents/: __init__.py  base.py  client_website_analyzer.py  commercial_fit_analyzer.py  delivery_fit_analyzer.py  meddicc_analyzer.py  notifications.py  references_match_agent.py  risk_analyzer.py
app/: __init__.py  config.py
domain/: __init__.py  auth.py  decisions.py  rules.py  scoring.py
infrastructure/db/: base.py  models.py  opportunities.py  session.py  users.py
interfaces/: __init__.py
interfaces/api/: __init__.py  auth_dependencies.py  auth_routes.py  dependencies.py  main.py  routes.py  routes_references.py
interfaces/ui/: 0_Login.py  __init__.py  client.py
interfaces/ui/components/: __init__.py  auth.py  layout.py  render.py
interfaces/ui/pages/: 1_Dashboard.py  2_Qualify.py  3_Opportunities.py  4_References.py  5_Users.py  6_Health.py  7_API_Status.py  (+1 more)
migrations/: env.py
migrations/versions/: 0001_create_references_pgvector.py  0002_create_opportunity_qualifications.py  0003_auth_users.py  0004_roles_caps_tech_review.py
schemas/: __init__.py  api.py  auth.py  common.py  meddicc.py  notifications.py  opportunity.py  reference.py  reference_match.py  scoring.py
seed_data/: references_metadata.json
seed_data/scripts/: seed_admin_user.py  seed_qualifications.py  seed_references.py
tests/: conftest.py  test_api_contracts.py  test_api_routes.py  test_contract_schemas.py  test_error_mapping.py  test_rules.py  test_schema_opportunity.py  test_scoring.py  test_seed_qualifications.py  test_supervisor_helpers.py
tools/: __init__.py  email_sender.py  gmail.py  pdf_loader.py  tavily.py  vectorstore.py  web_fetch.py
workflows/: state.py  supervisor.py
